#Fixed StumpJumperExpert 27.5 - adding to cart

--- a/css/page-individual.css
+++ b/css/page-individual.css
@@ -97,7 +97,7 @@ tbody {
 }
 
 .partName {
-    width: 200px;
+    width: 220px;
 }
 
 .uppercase {
